refactor(deps): upgrade junit to 5.14.1 and integrate cuiHttp library
- Fix JUnit version mismatch by upgrading to 5.14.1 with explicit junit-platform dependency management
- Refactor ProcessorConfigReader to use cuiHttp's HttpHandler for improved SSL context management and consistent timeout handling
- Add cui-http and cui-test-mockwebserver-junit5 dependencies to support new HTTP handling approach
- Apply OpenRewrite formatting: reorder imports, modernize Java patterns (getFirst(), Path.of()), fix indentation
- Update ProcessorConfigReaderTest to reflect new null-safety behavior (NullPointerException for null inputs)
- Add package-info.java with @NullMarked annotation for null-safety in ui.util package

This addresses dependency conflicts and improves HTTP client abstraction while maintaining backward compatibility.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>